--- a/Telegram/Resources/langs/lang.strings
+++ b/Telegram/Resources/langs/lang.strings
@@ -971,6 +971,9 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 
 "lng_switch_stickers" = "Stickers";
 "lng_switch_prices" = "Prices";
+"lng_switch_news" = "News";
+"lng_switch_icos" = "ICOS";
+"lng_switch_resources" = "Resources";
 "lng_switch_emoji" = "Emoji";
 "lng_switch_gifs" = "GIFs";
 "lng_stickers_featured_add" = "Add";
