--- a/Telegram/Resources/langs/lang.strings
+++ b/Telegram/Resources/langs/lang.strings
@@ -963,6 +963,7 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 // Now we do not use lng_prices_upgrade_now
 "lng_prices_upgrade_now" = "Upgrade Now";
 "lng_prices_footer" = "Visit the Site";
+"lng_prices_last_update" = "Last update: %1";
 "lng_prices_site_name" = "LIVE COIN WATCH";
 "lng_prices_market_cap" = "Market Cap: $%1";
 "lng_prices_header_coin" = "Coin";
@@ -970,6 +971,9 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "lng_prices_header_24h" = "24h";
 
 "lng_news_footer" = "Visit the Site";
+"lng_news_last_update" = "Last update: %1";
+"lng_news_sort_by_site" = "Sort by site";
+"lng_news_sort_by_time" = "Sort by time";
 
 "lng_switch_stickers" = "Stickers";
 "lng_switch_prices" = "Prices";
