--- a/Telegram/Resources/langs/lang.strings
+++ b/Telegram/Resources/langs/lang.strings
@@ -974,6 +974,8 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "lng_news_last_update" = "Last update: %1";
 "lng_news_sort_by_site" = "Sort by site";
 "lng_news_sort_by_time" = "Sort by time";
+"lng_news_show_all_news" = "Show all news";
+"lng_news_show_only_unread_news" = "Show only unread news";
 
 "lng_switch_stickers" = "Stickers";
 "lng_switch_prices" = "Prices";
