--- a/Telegram/Resources/langs/lang.strings
+++ b/Telegram/Resources/langs/lang.strings
@@ -21,6 +21,11 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "lng_menu_no_ads_plus_custom_prices" = "(No Ads + Custom Prices)";
 "lng_menu_mark_all_messages_as_read_in_the_tab" = "Mark All Messages as Read in the Tab";
 "lng_menu_mark_all_messages_as_read" = "Mark All Messages as Read";
+"lng_menu_news_copy_link" = "Copy Link Address";
+"lng_menu_news_copy_title" = "Copy Title";
+"lng_menu_news_mark_as_read" = "Mark as Read";
+"lng_menu_news_mark_all_site_news_as_read" = "Mark All Site News as Read";
+"lng_menu_news_mark_all_news_as_read" = "Mark All News as Read";
 
 "lng_disable_notifications_from_tray" = "Disable notifications";
 "lng_enable_notifications_from_tray" = "Enable notifications";
