--- a/Telegram/Resources/langs/lang.strings
+++ b/Telegram/Resources/langs/lang.strings
@@ -26,6 +26,8 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "lng_menu_news_mark_as_read" = "Mark as Read";
 "lng_menu_news_mark_all_site_news_as_read" = "Mark All Site News as Read";
 "lng_menu_news_mark_all_news_as_read" = "Mark All News as Read";
+"lng_menu_resources_copy_link" = "Copy Link Address";
+"lng_menu_resources_copy_title" = "Copy Title";
 
 "lng_disable_notifications_from_tray" = "Disable notifications";
 "lng_enable_notifications_from_tray" = "Enable notifications";
@@ -981,6 +983,9 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "lng_news_sort_by_time" = "Sort by time";
 "lng_news_show_all_news" = "Show all news";
 "lng_news_show_only_unread_news" = "Show only unread news";
+
+"lng_resources_footer" = "Visit the Site";
+"lng_resources_last_update" = "%1";
 
 "lng_switch_stickers" = "Stickers";
 "lng_switch_prices" = "Prices";
